<resources>
    <string name="app_name">NOTIFY MAD Project</string>
    <string name="noteify">Noteify</string>
    <string name="hello_user">Hello User!</string>
    <string name="lorem_ipsum">Lorem Ipsum dolor sit amet</string>
    <string name="settings">settings</string>
    <string name="button_card">button_card</string>
    <string name="btn_to_do_list">To-do List</string>
    <string name="reminder">reminder</string>
    <string name="btn_profile">profile</string>
    <string name="note_title">Enter note title</string>
    <string name="txt_note_desc">Enter note description</string>
    <string name="notepad_background_image">notepad back</string>
    <string name="add_new_note">Add a new note</string>
    <string name="txt_notes_card">Take Your Notes Here</string>
    <string name="txt_notes_ret">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="btn_notepad">Notepad</string>
    <string name="text_note_count">Note Count</string>
    <string name="txtStorageCount">Free Storage Used</string>
    <string name="ToDo_List">ToDo List</string>
    <string name="todo">ToDo 01</string>
    <string name="date_20_03_2021">20/03/2021</string>
    <string name="todo_02">ToDo 02</string>
    <string name="todo_03">ToDo 03</string>
    <string name="todo1">ToDo 01</string>
    <string name="ToDo_btn1">Todo button</string>
    <string name="ToDo_img1">todo image</string>
    <string name="todo2">ToDo 02</string>
    <string name="todo3">ToDo 03</string>
    <string name="todo4">ToDo 04</string>
    <string name="enter_title1">Enter ToDo name</string>
    <string name="add_tex">Add text</string>
    <string name="txt_profiles_card">Profiles</string>
    <string name="txt_profiles_desc">Profiles are like contacts in your phone. But works as a separate contact list</string>
    <string name="profileTopic">Take Your Profile Hera</string>
    <string name="txt_profile_name">Profile name goes here!</string>
    <string name="txt_profile_description">Profile description goes here</string>
    <string name="img_profile">profile image</string>
    <string name="lbl_profile_phone">Phone number:</string>
    <string name="txt_todo_ret">Take Your TO-DOs Here</string>
    <string name="txt_reminder_card">Take Your Reminders Here</string>
    <string name="app_sub_reminder">Reminder</string>
    <string name="reminder_float">reminder fab</string>
    <string name="rem_pic">reminder picture</string>
    <string name="your_reminders">Your reminders</string>
    <string name="reminder_01">Reminder 01</string>
    <string name="rem2date_03_14_2021">03/14/2021</string>
    <string name="reminder_02">Reminder 02</string>
    <string name="rem2ndate_03_14_2021">03/14/2021</string>
    <string name="reminder_03">Reminder 03</string>
    <string name="add_a_new_reminder">Add a new reminder</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="remcheck">reminder checkbox</string>
    <string name="update_reminder">Update reminder</string>
    <string name="card_long">card_long</string>
    <string name="profile_home_01">profile_home_01</string>
    <string name="profile_01_in_home">profile_01</string>
    <string name="profile_02_home">profile_02_home</string>
    <string name="profile_03_home">profile_03_home</string>
    <string name="profile_home_1">profile_home_1</string>
    <string name="plussine">plussine</string>
    <string name="profile01">profile01_</string>
    <string name="profile_01_home_01">profile_01_home_01</string>
    <string name="profile_01_home_02">profile_01_home_02</string>
    <string name="profile_01_home_03">profile_01_home_03</string>
    <string name="profile_01_home_04">profile_01_home_04</string>
    <string name="profile_01_home_05">profile_01_home_05</string>
    <string name="_9477_xxx_xx_xx">+9477 xxx xx xxx</string>
    <string name="profile_01_home_06">profile_01_home_06</string>
    <string name="n_g_k_nawagmuwa">N.G.K.Nawagmuwa</string>
    <string name="profile_01_hom2e_07">profile_01_home_07</string>
    <string name="profile_01_home_07">profile_01_home_07</string>
    <string name="_9477_xxx_xx_xxx">+9477 xxx xx xxx</string>
    <string name="profile_01_home_010">profile_01_home_010</string>
    <string name="profile_02">Profile 02</string>
    <string name="profile_01_home_08">Profile 01</string>
    <string name="profile_01_home_011">Profile 01</string>
    <string name="profile_01_home_012">Profile 01</string>
    <string name="profile_01">Profile 01</string>
    <string name="profile_01_home_013">Profile 01</string>
    <string name="profile_01_home_014">Profile 01</string>
    <string name="profile_03">Profile 03</string>
    <string name="profile_01_home_016">profile_01_home_016</string>
    <string name="_9477_xxx_xx_xxx1">+9477 xxx xx xxx</string>
    <string name="profile_01_home_017">profile_01_home_017</string>
    <string name="n_g_k_Sasiru">N.G.K.Nawagmuwa</string>
    <string name="profile_disply01">profile_disply01</string>
    <string name="profile_disply_02">profile_disply_02</string>
    <string name="n_g_k_nawagamuwa">N.G.K.Nawagamuwa</string>
    <string name="profile_disply_03">profile_disply_03</string>
    <string name="textview">TextView</string>
    <string name="sample_note_title">Sample Note Title</string>
    <string name="sample_time">00:00</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Items</string>
    <string name="editor_activity_title_new_product">Add an item</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="product_name">Product</string>
    <string name="product_grade">Product grade</string>
    <string name="category_measurement">Quantity</string>
    <string name="hint_product_name">Product name</string>
    <string name="hint_product_model">Model</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="unit_product_quantity">pcs</string>
    <string name="grade_unknown">Unknown</string>
    <string name="grade_new">New</string>
    <string name="grade_used">Used</string>
    <string name="editor_insert_product_successful">Item saved</string>
    <string name="editor_insert_product_failed">Error with saving item</string>
    <string name="empty_view_title_text">No products, no money, no funny…</string>
    <string name="empty_view_subtitle_text">Get started by adding an item</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="editor_update_product_successful">Item updated</string>
    <string name="editor_update_product_failed">Error with updating item</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_product_successful">Item deleted</string>
    <string name="editor_delete_product_failed">Error with deleting item</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unknown_model">Unknown model</string>
    <string name="product_photo">Photo</string>
    <string name="supplier">Supplier</string>
    <string name="hint_supplier_name">E.g.: Supplier Name</string>
    <string name="hint_email_supplier">E.g.: email@supplier.com</string>
    <string name="currency_symbol">€</string>
    <string name="price_hint_editor_activity">E.g.: 28.99</string>
    <string name="add_photo_hint_text">Tap to add a photo</string>
    <string name="edit_photo_hint_text">Tap to change a photo</string>
    <string name="intent_type">image/*</string>
    <string name="select_image">Select image</string>
    <string name="action_order_more">Order more</string>
    <string name="validation_msg_product_name">Product name is required</string>
    <string name="validation_msg_product_quantity">Quantity is required</string>
    <string name="validation_msg_product_price">Price is required</string>
    <string name="validation_msg_product_image">Photo of product is required</string>
    <string name="error_msg_stock_update">Issue with upload value of quantity</string>
    <string name="buy_msg_confirm">Item has been sold</string>
    <string name="no_product_in_stock">No available product in stock</string>
    <string name="in_stock">In stock:</string>
    <string name="pcs_unit">pcs</string>
    <string name="euro_currency_sign">€</string>
    <string name="example_model">DMC-370ZX</string>
    <string name="example_name_of_item">Sony</string>
    <string name="example_price">199,99</string>
    <string name="example_quantity">9</string>
    <string name="dummy_data_product_name">SONY</string>
    <string name="dummy_data_product_model">EXAMPLE-J34AL</string>
    <string name="dummy_data_supplier_email">orders.storehouse@sony.com</string>
    <string name="dummy_data_supplier_name">John Doe</string>
    <string name="toast_out_of_stock_msg">Product is out of stock!</string>
    <string name="new_task">new_task</string>
    <string name="save">save</string>
    <string name="tasks">taska</string>
    <string name="prfiletextview">TextView</string>
    <string name="notification">Notification</string>
</resources>