<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/main"
        android:includeFontPadding="false"
        android:text="@string/noteify"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/light"
        android:includeFontPadding="false"
        android:text="@string/hello_user"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle" />

    <ImageButton
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/settings"
        android:src="@drawable/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toEndOf="@+id/appTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/button_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/button_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appSubTitle"
        app:srcCompat="@drawable/card_01" />

    <ImageView
        android:id="@+id/button_card2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_card"
        app:srcCompat="@drawable/card_01" />

    <ImageView
        android:id="@+id/button_card3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_card2"
        app:srcCompat="@drawable/card_01" />

    <ImageView
        android:id="@+id/button_card4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_card3"
        app:srcCompat="@drawable/card_01" />

    <Button
        android:id="@+id/btnNotepad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="268dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/light"
        android:text="@string/btn_notepad"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="@+id/button_card"
        app:layout_constraintTop_toTopOf="@+id/button_card" />

    <Button
        android:id="@+id/btnTodoList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/light"
        android:onClick="intentTodo"
        android:text="@string/btn_to_do_list"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="@+id/button_card2"
        app:layout_constraintTop_toTopOf="@+id/button_card2" />

    <Button
        android:id="@+id/btnReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/light"
        android:text="@string/reminder"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="@+id/button_card3"
        app:layout_constraintTop_toTopOf="@+id/button_card3" />

    <Button
        android:id="@+id/btn_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="276dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/light"
        android:text="@string/btn_profile"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="@+id/button_card4"
        app:layout_constraintTop_toTopOf="@+id/button_card4" />

    <TextView
        android:id="@+id/txtNoteView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/main"
        android:text="@string/txt_notes_card"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/button_card"
        app:layout_constraintTop_toTopOf="@+id/button_card" />

    <TextView
        android:id="@+id/txtTodoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/main"
        android:text="@string/txt_todo_ret"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/button_card2"
        app:layout_constraintTop_toTopOf="@+id/button_card2" />

    <TextView
        android:id="@+id/txtNotesRet"
        android:layout_width="200dp"
        android:layout_height="67dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/light"
        android:justificationMode="inter_word"
        android:text="@string/txt_notes_ret"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/button_card"
        app:layout_constraintTop_toTopOf="@+id/button_card" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:checked="false"
        android:clickable="false"
        android:fontFamily="@font/light"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="@+id/button_card2"
        app:layout_constraintTop_toBottomOf="@+id/txtTodoView"
        app:useMaterialThemeColors="false" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:clickable="false"
        android:fontFamily="@font/light"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="@+id/button_card2"
        app:layout_constraintTop_toBottomOf="@+id/txtTodoView"
        app:useMaterialThemeColors="false" />

</androidx.constraintlayout.widget.ConstraintLayout>